# activity-info-runner

./: .dockerignore  .gitignore  Dockerfile.server  Dockerfile.worker  README.md  SETUP.md  actions.py  blob_store.py  debug.py  docker-compose.prod.yml  docker-compose.yml  graph.py  main.py  models.py  pyproject.toml  server.py  test_replace_ref.py  utils.py  worker.py
.github/workflows/: deploy.yml
actions/: calculation_formulas.py  common.py  dtos.py  metric_configuration.py  models.py
api/: __init__.py  cache.py  client.py  endpoints.py  models.py
deployments/: setup-postgres.sh
parser/: __init__.py  ast.py  evaluators.py  expression.py  grammar.py  parser.py
scripts/: boundaries.py  changeset.py  dtos.py  models.py  script.py
scripts/scripts/: all.py  operation_calculation_formulas.py
tests/: test_actions.py  test_actions_calculation_formulas.py  test_actions_common.py  test_actions_metric_configuration.py  test_api_client.py  test_api_models.py  test_cache.py  test_endpoints.py  test_evaluator.py  test_parser.py  test_utils.py
ui/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
ui/src/: App.tsx  app.css  main.tsx  types.ts  utils.tsx
ui/src/components/: action-columns.tsx  actions-view.tsx  app-navbar.tsx  boundaries-view.tsx  changeset-panel.tsx  field-actions-table.tsx  generic-table.tsx  logs-table.tsx  record-actions-table.tsx  run-script-dialog.tsx  runs-list.tsx  timings-table.tsx  timings-timeline.tsx  user-menu.tsx  worker-status.tsx
ui/src/pages/: Home.tsx
workflows/: workflows.py
